2_services_networking/3-nginx.serviceaccount.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx
  name: nginx
spec:
  serviceAccountName: custom-token
  containers:
  - image: nginx
    name: nginx
    resources: {}
